<resources>
    <string name="app_name">AccelPlot</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="bluetooth_label">Bluetooth</string>
    <string name="bluetooth_connect">Connect</string>
    <string name="bluetooth_disconnect">Disconnect</string>
    <string name="label_control">Controls</string>
    <string name="stream_start">Start Stream</string>
    <string name="stream_stop">Stop Stream</string>
    <string name="scroll_x_on">Lock X</string>
    <string name="scroll_x_off">Scroll X</string>

    <string name="label_datastorage">Data Storage</string>
    <string name="textoff_savedata">Save Data</string>
    <string name="texton_savedata">Stop Saving</string>

    <string name="label_audioout">Audio Out</string>
    <string name="textoff_audioout">Enable Audio</string>
    <string name="texton_audioout">Stop Audio</string>
    <string name="radio_ADC1">X </string>
    <string name="radio_ADC2">Y </string>
    <string name="radio_ADC3">Z </string>
    <string name="radio_ADC4">X Gyro</string>
    <string name="radio_ADC1_Ch1">X_Ch</string>
    <string name="radio_ADC2_Ch1">Y_Ch</string>
    <string name="radio_ADC3_Ch1">Z_Ch</string>
    <string name="radio_ADC4_Ch1">X Gyro_Ch1</string>
    <string name="radio_ADC1_Ch2">X_Ch2</string>
    <string name="radio_ADC2_Ch2">Y_Ch2</string>
    <string name="radio_ADC3_Ch2">Z_Ch2</string>
    <string name="radio_ADC4_Ch2">X Gyro_Ch2</string>
    <string name="radio_labelCh1">Ch1</string>
    <string name="radio_labelCh2">Ch2</string>

    <string name="label_Arduino">Arduino</string>
    <string name="Arduino_buildit">Build It</string>
    <string name="file_label">Samples to Save</string>

    <string name="chart_control_label">Control</string>
    <string name="chart_zoom_minus">-</string>
    <string name="chart_zoom_plus">+</string>

</resources>
